@@ -22,59 +22,77 @@ import net.minecraft.world.phys.shapes.VoxelShape;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.List;
 
 public class DoorAndWindow extends HorizontalDirectionalStructure {
+    // 额外属性
     public static final BooleanProperty OPEN = BlockStateProperties.OPEN;
-    //体积映射
-    private final ArrayList<VoxelShape> shapeList_open;
-    private final ArrayList<VoxelShape> shapeList_close;
     protected boolean open;
+    // 存储方块的形状
+    ArrayList<VoxelShape> shapeList_open = new ArrayList<>(0);
+    ArrayList<VoxelShape> shapeList_close = new ArrayList<>(0);
 
-    //构造
+    // 构造
     public DoorAndWindow(Properties properties, NpuBlocks.LoadMethod loadMethod) {
         super(properties, loadMethod);
-        shapeList_open = new ArrayList<>(0);
-        shapeList_close = new ArrayList<>(0);
-        open = false;
+        this.open = false;
     }
-
-    //与构造并用
-    public DoorAndWindow setSHAPE(ShapeData openShapeData, ShapeData closeShapeData) {
-        if (!openShapeData.loaderIsObj()) for (List<Double> shape : openShapeData.getShapeList()) {
-            shapeList_open.add(Shapes.box(shape.get(0), shape.get(1), shape.get(2), shape.get(3), shape.get(4), shape.get(5)));
-        }
-        if (!closeShapeData.loaderIsObj()) for (List<Double> shape : closeShapeData.getShapeList()) {
-            shapeList_close.add(Shapes.box(shape.get(0), shape.get(1), shape.get(2), shape.get(3), shape.get(4), shape.get(5)));
-        }
+    // 与构造并用设置形状
+    public DoorAndWindow setShape(ShapeData shapeData1, ShapeData shapeData2) {
+        setShape(shapeData1, shapeList_open);
+        setShape(shapeData2, shapeList_close);
 
         return this;
     }
 
+    // 额外属性注册
     @Override
     protected void createBlockStateDefinition(StateDefinition.Builder<Block, BlockState> builder) {
         builder.add(OPEN);
         super.createBlockStateDefinition(builder);
     }
 
+    // 放置时状态
     @Override
     public BlockState getStateForPlacement(BlockPlaceContext context) {
         return defaultBlockState().setValue(OPEN, false).setValue(FACING, context.getHorizontalDirection().getOpposite());
     }
 
+    // 设置形状
+    @Override
+    public @NotNull VoxelShape getShape(@NotNull BlockState pState, @NotNull BlockGetter pGetter, @NotNull BlockPos pPos, @NotNull CollisionContext pContext) {
+        if (shape == null || direction != pState.getValue(FACING) || open != pState.getValue(OPEN)) {
+            direction = pState.getValue(FACING);
+            open = pState.getValue(OPEN);
+            loadShape();
+        }
+        return shape;
+    }
+
+    // 被空手点击时
+    @Override
+    protected @NotNull InteractionResult useWithoutItem(@NotNull BlockState state, @NotNull Level level, @NotNull BlockPos pos,
+                                                        @NotNull Player player, @NotNull BlockHitResult res) {
+        state = state.cycle(OPEN);
+        level.setBlock(pos, state, 10);
+        level.gameEvent(player, state.getValue(OPEN) ? GameEvent.BLOCK_OPEN : GameEvent.BLOCK_CLOSE, pos);
+        return InteractionResult.SUCCESS;
+    }
+
+    // 辅助函数
+    // 根据loadMethod加载形状
     private void loadShape() {
-        ArrayList<VoxelShape> shapeList = open ? shapeList_open : shapeList_close;
+        ArrayList<VoxelShape> list = open ? shapeList_open : shapeList_close;
         shape = NpuBlocks.EmunShape.HALF_SHPAE_BOTTOM.getShape();
-        if (!shapeList.isEmpty()) switch (loadMethod) {
+        if (!shape.isEmpty()) switch (loadMethod) {
             case METICULOUS:
                 shape = NpuBlocks.EmunShape.NULL_SHPAE.getShape();
-                for (VoxelShape voxelShape : shapeList) {
+                for (VoxelShape voxelShape : list) {
                     shape = Shapes.or(shape, getShapeByDirection(voxelShape, direction));
                 }
                 break;
             case ROUGH:
-                shape = shapeList.get(0);
-                for (VoxelShape voxelShape : shapeList) {
+                shape = list.getFirst();
+                for (VoxelShape voxelShape : list) {
                     AABB a = shape.bounds();
                     AABB b = voxelShape.bounds();
                     shape = getShapeByDirection(Shapes.box(
@@ -86,22 +104,4 @@ public class DoorAndWindow extends HorizontalDirectionalStructure {
         }
     }
 
-    @Override
-    public @NotNull VoxelShape getShape(@NotNull BlockState pState, @NotNull BlockGetter pGetter, @NotNull BlockPos pPos, @NotNull CollisionContext pContext) {
-        if (shape == null || direction != pState.getValue(FACING) || open != pState.getValue(OPEN)) {
-            direction = pState.getValue(FACING);
-            open = pState.getValue(OPEN);
-            loadShape();
-        }
-        return shape;
-    }
-
-    @Override
-    protected @NotNull InteractionResult useWithoutItem(@NotNull BlockState state, @NotNull Level level, @NotNull BlockPos pos,
-                                                        @NotNull Player player, @NotNull BlockHitResult res) {
-        state = state.cycle(OPEN);
-        level.setBlock(pos, state, 10);
-        level.gameEvent(player, state.getValue(OPEN) ? GameEvent.BLOCK_OPEN : GameEvent.BLOCK_CLOSE, pos);
-        return InteractionResult.SUCCESS;
-    }
 }
