@@ -25,22 +25,20 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class HorizontalMultipleDirectionalStructure extends Block {
-
-    //方向属性
+    // 额外属性
     public static final IntegerProperty ANGEL = IntegerProperty.create("angle", 0, 165);
-    //体积映射
+    public NpuBlocks.LoadMethod loadMethod;
+    protected VoxelShape shape;
+    protected int angle;
+    // 体积映射
     private final ArrayList<VoxelShape> angleShapeList0;
     private final ArrayList<VoxelShape> angleShapeList15;
     private final ArrayList<VoxelShape> angleShapeList30;
     private final ArrayList<VoxelShape> angleShapeList45;
     private final ArrayList<VoxelShape> angleShapeList60;
     private final ArrayList<VoxelShape> angleShapeList75;
-    //加载方式
-    public NpuBlocks.LoadMethod loadMethod;
-    protected VoxelShape shape;
-    protected int angle;
 
-    //构造
+    // 构造
     public HorizontalMultipleDirectionalStructure(Properties properties, NpuBlocks.LoadMethod loadMethod) {
         super(properties);
         this.angleShapeList0 = new ArrayList<>(0);
@@ -53,8 +51,19 @@ public class HorizontalMultipleDirectionalStructure extends Block {
         this.loadMethod = loadMethod;
         this.angle = 0;
     }
-
-    //与构造并用
+    private HorizontalMultipleDirectionalStructure(Properties properties, String loadMethod, int angle) {
+        super(properties);
+        this.angleShapeList0 = new ArrayList<>(0);
+        this.angleShapeList15 = new ArrayList<>(0);
+        this.angleShapeList30 = new ArrayList<>(0);
+        this.angleShapeList45 = new ArrayList<>(0);
+        this.angleShapeList60 = new ArrayList<>(0);
+        this.angleShapeList75 = new ArrayList<>(0);
+        this.shape = null;
+        this.loadMethod = NpuBlocks.LoadMethod.valueOf(loadMethod);
+        this.angle = angle;
+    }
+    // 与构造并用
     public HorizontalMultipleDirectionalStructure setSHAPE(ShapeData shapeData0, ShapeData shapeData15, ShapeData shapeData30,
                                                            ShapeData shapeData45, ShapeData shapeData60, ShapeData shapeData75) {
         loadShape(shapeData0, angleShapeList0);
@@ -66,18 +75,13 @@ public class HorizontalMultipleDirectionalStructure extends Block {
         return this;
     }
 
-    //旋转坐标变化
-    public VoxelShape getShapeByAngle(VoxelShape shape, int angle) {
-        if (angle < 90) return shape;
-        else return Shapes.box(shape.bounds().minZ, shape.bounds().minY, 1 - shape.bounds().maxX,
-                shape.bounds().maxZ, shape.bounds().maxY, 1 - shape.bounds().minX);
-    }
-
+    // 额外属性注册
     @Override
     protected void createBlockStateDefinition(StateDefinition.Builder<Block, BlockState> builder) {
         builder.add(ANGEL);
     }
 
+    // 放置时状态
     @Nullable
     @Override
     public BlockState getStateForPlacement(BlockPlaceContext context) {
@@ -87,12 +91,39 @@ public class HorizontalMultipleDirectionalStructure extends Block {
         });
     }
 
+    // 设置形状
+    @Override
+    public @NotNull VoxelShape getShape(@NotNull BlockState pState, @NotNull BlockGetter pGetter, @NotNull BlockPos pPos, @NotNull CollisionContext pContext) {
+        if (shape == null || angle != pState.getValue(ANGEL)) {
+            angle = pState.getValue(ANGEL);
+            loadShape();
+        }
+        return shape.optimize();
+    }
+
+    // 被空手点击时
+    @Override
+    protected @NotNull InteractionResult useWithoutItem(@NotNull BlockState state, @NotNull Level level, @NotNull BlockPos pos,
+                                                        @NotNull Player player, @NotNull BlockHitResult res) {
+        state = state.setValue(ANGEL, (state.getValue(ANGEL) + 15) % 180);
+        level.setBlock(pos, state, 10);
+        level.gameEvent(player, GameEvent.BLOCK_CHANGE, pos);
+        return InteractionResult.SUCCESS;
+    }
+
+    // 辅助函数
+    // 旋转坐标变化
+    public VoxelShape getShapeByAngle(VoxelShape shape, int angle) {
+        if (angle < 90) return shape;
+        else return Shapes.box(shape.bounds().minZ, shape.bounds().minY, 1 - shape.bounds().maxX,
+                shape.bounds().maxZ, shape.bounds().maxY, 1 - shape.bounds().minX);
+    }
+    // 根据loadMethod加载形状
     private void loadShape(ShapeData shapeData, ArrayList<VoxelShape> angleShapeList) {
         if (!shapeData.loaderIsObj()) for (List<Double> shape : shapeData.getShapeList()) {
             angleShapeList.add(Shapes.box(shape.get(0), shape.get(1), shape.get(2), shape.get(3), shape.get(4), shape.get(5)));
         }
     }
-
     private void loadShape() {
         ArrayList<VoxelShape> shapeList = switch (angle / 15) {
             case 1 -> angleShapeList15;
@@ -111,7 +142,7 @@ public class HorizontalMultipleDirectionalStructure extends Block {
                 }
                 break;
             case ROUGH:
-                shape = shapeList.get(0);
+                shape = shapeList.getFirst();
                 for (VoxelShape voxelShape : shapeList) {
                     AABB a = shape.bounds();
                     AABB b = voxelShape.bounds();
@@ -122,23 +153,5 @@ public class HorizontalMultipleDirectionalStructure extends Block {
                 shape = getShapeByAngle(shape, angle);
                 break;
         }
-    }
-
-    @Override
-    public @NotNull VoxelShape getShape(@NotNull BlockState pState, @NotNull BlockGetter pGetter, @NotNull BlockPos pPos, @NotNull CollisionContext pContext) {
-        if (shape == null || angle != pState.getValue(ANGEL)) {
-            angle = pState.getValue(ANGEL);
-            loadShape();
-        }
-        return shape.optimize();
-    }
-
-    @Override
-    protected @NotNull InteractionResult useWithoutItem(@NotNull BlockState state, @NotNull Level level, @NotNull BlockPos pos,
-                                                        @NotNull Player player, @NotNull BlockHitResult res) {
-        state = state.setValue(ANGEL, (state.getValue(ANGEL) + 15) % 180);
-        level.setBlock(pos, state, 10);
-        level.gameEvent(player, GameEvent.BLOCK_CHANGE, pos);
-        return InteractionResult.SUCCESS;
     }
 }
