@@ -16,30 +16,43 @@ import org.jetbrains.annotations.NotNull;
 import java.util.ArrayList;
 import java.util.List;
 
-public class NormalStructure extends Block {
-    //体积
+public class NormalStructure extends Block{
+    // 额外属性
+    // 加载方式
+    public NpuBlocks.LoadMethod loadMethod;
+    // 体积
     public ArrayList<VoxelShape> shapeList;
     public VoxelShape shape;
-    //加载方式
-    public NpuBlocks.LoadMethod loadMethod;
 
-    //构造
+    // 构造
     public NormalStructure(BlockBehaviour.Properties properties, NpuBlocks.LoadMethod loadMethod) {
         super(properties);
         shapeList = new ArrayList<>(0);
         shape = null;
         this.loadMethod = loadMethod;
     }
-
-    //与构造并用
-    public NormalStructure setSHAPE(ShapeData shapeData) {
-        if (!shapeData.loaderIsObj()) for (List<Double> shape : shapeData.getShapeList()) {
-            shapeList.add(Shapes.box(shape.get(0), shape.get(1), shape.get(2), shape.get(3), shape.get(4), shape.get(5)));
-        }
+    // 与构造并用设置形状
+    public NormalStructure setShape(ShapeData shapeData) {
+        setShape(shapeData, shapeList);
 
         return this;
     }
+    protected void setShape(ShapeData shapeData, ArrayList<VoxelShape> shapeList) {
+        if (!shapeData.loaderIsObj()) for (List<Double> shape : shapeData.getShapeList()) {
+            shapeList.add(Shapes.box(shape.get(0), shape.get(1), shape.get(2), shape.get(3), shape.get(4), shape.get(5)));
+        }
+    }
 
+    // 设置形状
+    @Override
+    public @NotNull VoxelShape getShape(@NotNull BlockState pState, @NotNull BlockGetter pGetter, @NotNull BlockPos pPos, @NotNull CollisionContext pContext) {
+        if (shape == null) {
+            loadShape();
+        }
+        return shape.optimize();
+    }
+
+    // 根据loadMethod加载形状
     private void loadShape() {
         shape = NpuBlocks.EmunShape.HALF_SHPAE_BOTTOM.getShape();
         if (!shapeList.isEmpty()) switch (loadMethod) {
@@ -50,7 +63,7 @@ public class NormalStructure extends Block {
                 }
                 break;
             case ROUGH:
-                shape = shapeList.get(0);
+                shape = shapeList.getFirst();
                 for (VoxelShape voxelShape : shapeList) {
                     AABB a = shape.bounds();
                     AABB b = voxelShape.bounds();
@@ -61,13 +74,4 @@ public class NormalStructure extends Block {
                 break;
         }
     }
-
-    @Override
-    public @NotNull VoxelShape getShape(@NotNull BlockState pState, @NotNull BlockGetter pGetter, @NotNull BlockPos pPos, @NotNull CollisionContext pContext) {
-        if (shape == null) {
-            loadShape();
-        }
-        return shape.optimize();
-    }
-
 }
